<resources>
    <string name="trtcvoiceroom_room_title" formatted="false">房间号: %d</string>
    <string name="trtcvoiceroom_numer_format" formatted="false" >%d人正在聊天</string>
    <string name="trtcvoiceroom_agree">同意</string>
    <string name="trtcvoiceroom_warning_not_empty">输入不能为空!</string>
    <string name="trtcvoiceroom_send">发送</string>
    <string name="trtcvoiceroom_main_title" formatted="false">%1s(%2d)</string>
    <string name="trtcvoiceroom_dialog_title_log">Global Log</string>
    <string name="trtcvoiceroom_dialog_clear_log">清除Log</string>
    <string name="trtcvoiceroom_dialog_ok">清除</string>
    <string name="trtcvoiceroom_dialog_cancel">取消</string>
    <string name="trtcvoiceroom_title_chat_room">语音聊天室</string>
    <string name="trtcvoiceroom_toast_reentering">该房间是您创建，重新进入中…</string>
    <string name="trtcvoiceroom_toast_obtain_list_failure">获取列表失败:%s</string>
    <string name="trtcvoiceroom_toast_request_network_failure">请求网络失败:%s</string>
    <string name="trtcvoiceroom_title_create_chat_room">创建语音聊天室</string>
    <string name="trtcvoiceroom_title_theme">主题</string>
    <string name="trtcvoiceroom_hint_please_input_theme">请输入聊天室主题</string>
    <string name="trtcvoiceroom_title_nickname">昵称</string>
    <string name="trtcvoiceroom_hint_please_input_nickname">请输入昵称</string>
    <string name="trtcvoiceroom_tv_need_agree">上麦需要房主同意</string>
    <string name="trtcvoiceroom_tv_sound_quality">音质选择</string>
    <string name="trtcvoiceroom_rb_normal">标准</string>
    <string name="trtcvoiceroom_rb_music">音乐</string>
    <string name="trtcvoiceroom_tv_create_chat_room">创建聊天室</string>
    <string name="trtcvoiceroom_msg_living_now_whether_to_exit_live">当前正在直播，是否退出直播？</string>
    <string name="trtcvoiceroom_tv_invite_chat">邀请上麦</string>
    <string name="trtcvoiceroom_toast_create">创建房间失败</string>
    <string name="trtcvoiceroom_toast_create_live_room_failure">创建房间失败[%1$d]:%2$s</string>
    <string name="trtcvoiceroom_toast_owner_succeeded_in_occupying_the_seat">房主占座成功</string>
    <string name="trtcvoiceroom_toast_owner_failed_to_occupy_the_seat">房主占座失败[%1$d]:%2$s</string>
    <string name="trtcvoiceroom_tv_not_mute_audio">对 Ta 解禁</string>
    <string name="trtcvoiceroom_tv_mute_audio">对 Ta 禁言</string>
    <string name="trtcvoiceroom_tv_please_offline">请 Ta 下麦</string>
    <string name="trtcvoiceroom_tv_invite_someone_to_chat">邀人上麦</string>
    <string name="trtcvoiceroom_tv_ban_seat">封禁麦位</string>
    <string name="trtcvoiceroom_tv_not_ban_seat">解禁麦位</string>
    <string name="trtcvoiceroom_toast_request_has_expired">该请求已过期</string>
    <string name="trtcvoiceroom_toast_accept_request_failure">接受请求失败:%d</string>
    <string name="trtcvoiceroom_msg_apply_for_chat">申请上%d号麦</string>
    <string name="trtcvoiceroom_toast_already_someone_in_this_position">这个麦位已经有人了</string>
    <string name="trtcvoiceroom_toast_invitation_sent_successfully">发送邀请成功！</string>
    <string name="trtcvoiceroom_toast_refuse_to_chat">%s 拒绝上麦</string>
    <string name="trtcvoiceroom_toast_invite_to_chat_successfully">抱%s上麦成功啦！</string>
    <string name="trtcvoiceroom_msg_click_to_chat">点击上麦</string>
    <string name="trtcvoiceroom_toast_exit_the_room_successfully">退房成功</string>
    <string name="trtcvoiceroom_toast_enter_the_room_successfully">进房成功</string>
    <string name="trtcvoiceroom_toast_enter_the_room_failure">进房失败[%1$d]:%2$s</string>
    <string name="trtcvoiceroom_toast_list_has_not_been_initialized">麦位列表还没有初始化好哦！</string>
    <string name="trtcvoiceroom_toast_obtain_list_failed">组件获取列表失败:%s</string>
    <string name="trtcvoiceroom_msg_offline">下麦</string>
    <string name="trtcvoiceroom_toast_position_is_already_occupied">该麦位已经被人占了</string>
    <string name="trtcvoiceroom_tv_apply_for_chat">申请上麦</string>
    <string name="trtcvoiceroom_toast_position_is_locked_cannot_apply_for_chat">麦位已锁定，无法申请上麦</string>
    <string name="trtcvoiceroom_toast_offline_successfully">下麦成功</string>
    <string name="trtcvoiceroom_toast_offline_failure">下麦失败:%s</string>
    <string name="trtcvoiceroom_toast_you_are_already_an_anchor">您已经是麦上主播了~</string>
    <string name="trtcvoiceroom_toast_the_room_is_not_ready">房间还没准备好~</string>
    <string name="trtcvoiceroom_toast_application_has_been_sent_please_wait_for_processing">申请已发出，请等待主播处理</string>
    <string name="trtcvoiceroom_toast_failed_to_send_application">申请发送失败:%s</string>
    <string name="trtcvoiceroom_msg_invite_you_to_chat">主播邀请你上%d号麦</string>
    <string name="trtcvoiceroom_msg_you_refuse_to_chat">你拒绝上麦申请</string>
    <string name="trtcvoiceroom_msg_close_room">房主已解散房间</string>
    <string name="trtcvoiceroom_toast_you_have_turned_on_the_microphone">您已开启麦克风</string>
    <string name="trtcvoiceroom_toast_you_have_turned_off_the_microphone">您已关闭麦克风</string>
    <string name="trtcvoiceroom_toast_you_have_unmuted">您已取消静音</string>
    <string name="trtcvoiceroom_toast_you_are_muted">您已静音</string>
    <string name="trtcvoiceroom_toast_anchor_can_only_operate_it">主播才能操作哦</string>
    <string name="trtcvoiceroom_toast_please_enter_content">请输入内容</string>
    <string name="trtcvoiceroom_toast_sent_successfully">发送成功</string>
    <string name="trtcvoiceroom_toast_sent_message_failure">发送消息失败[%1$d]:%2$s</string>
    <string name="trtcvoiceroom_tv_information_acquisition">房主信息获取中</string>
    <string name="trtcvoiceroom_tv_the_anchor_is_not_online">主播未上线</string>
    <string name="trtcvoiceroom_tv_online">%1$s上%2$d号麦</string>
    <string name="trtcvoiceroom_tv_offline">%1$s下%2$d号麦</string>
    <string name="trtcvoiceroom_tv_the_position_has_muted">%d号位被禁言</string>
    <string name="trtcvoiceroom_tv_the_position_has_unmuted">%d号位解除禁言</string>
    <string name="trtcvoiceroom_tv_the_owner_ban_this_position">房主封禁%d号位</string>
    <string name="trtcvoiceroom_tv_the_owner_not_ban_this_position">房主解禁%d号位</string>
    <string name="trtcvoiceroom_tv_enter_room">%s进房</string>
    <string name="trtcvoiceroom_tv_exit_room">%s退房</string>
    <string name="trtcvoiceroom_tv_seat_locked">座位已锁定</string>
    <string name="trtcvoiceroom_tv_the_anchor_name_is_still_looking_up">主播名还在查找</string>
    <string name="trtcvoiceroom_tv_loading">正在加载中</string>
    <string name="trtcvoiceroom_tv_invite">邀请</string>
    <string name="trtcvoiceroom_tv_tools_test">测试测试</string>
    <string name="trtcvoiceroom_tv_no_content">暂无内容哦~</string>
    <string name="trtcvoiceroom_tv_tools_apply_tips">申请上1号麦</string>
    <string name="trtcvoiceroom_tv_tools_anchor_name_tips">张晓闯</string>
    <string name="trtcvoiceroom_tv_tools_user_name_tips">主播</string>
    <string name="trtcvoiceroom_tv_please_select">请选择</string>
    <string name="trtcvoiceroom_create_room_limit">您当前使用的云通讯账号未开通音视频聊天室功能，创建聊天室数量超过限额，请前往腾讯云官网开通【IM音视频聊天室】，地址：https://cloud.tencent.com/document/product/269/11673</string>
    <string name="trtcvoiceroom_create_or_join_group_limit">单个用户可创建和加入的群组数量超过了限制，请购买相关套餐,价格地址：https://cloud.tencent.com/document/product/269/11673</string>
    <string name="trtcvoiceroom_group_member_limit">群成员数量超过限制，请参考，请购买相关套餐，价格地址：https://cloud.tencent.com/document/product/269/11673</string>
    <string name="trtcvoiceroom_me">我</string>
    <string name="trtcvoiceroom_tv_online_no_name">上%d号麦</string>
    <string name="trtcvoiceroom_tv_offline_no_name">下%d号麦</string>
    <string name="trtcvoiceroom_btn_confirm">我确定</string>
    <string name="trtcvoiceroom_btn_cancel">再等等</string>
    <string name="trtcvoiceroom_room_id">房间ID:%d</string>
    <string name="trtcvoiceroom_create_room">创建房间</string>
    <string name="trtcvoiceroom_bgm_title">背景音乐</string>
    <string name="trtcvoiceroom_select_song">选择歌曲</string>
    <string name="trtcvoiceroom_music_volume">音乐音量</string>
    <string name="trtcvoiceroom_mic_volume">人声音量</string>
    <string name="trtcvoiceroom_changer">变声</string>
    <string name="trtcvoiceroom_reverb">混响效果</string>
    <string name="trtcvoiceroom_back">返回</string>
    <string name="trtcvoiceroom_start_talk">开始交谈</string>
    <string name="trtcvoiceroom_anchor_leave_room">离开会解散房间，确定离开吗？</string>
    <string name="trtcvoiceroom_sound_effects">音效</string>
    <string name="trtcvoiceroom_request_expired">该请求已过期</string>
    <string name="trtcvoiceroom_accept_failed">接受请求失败</string>
    <string name="trtcvoiceroom_seat_unmuted">解除禁言</string>
    <string name="trtcvoiceroom_audience_leave_room">确定离开？</string>
    <string name="trtcvoiceroom_sound_audition">音乐试听</string>
    <string name="trtcvoiceroom_put_on_your_headphones">请带上耳机获得更好体验</string>
    <string name="trtcvoiceroom_copyright_sounds">版权曲库©</string>
    <string name="trtcvoiceroom_sounds_adjustment">音乐升降调</string>
    <string name="trtcvoiceroom_room_theme">房间主题</string>
    <string name="trtcvoiceroom_room_theme_limit">请输入房间主题（最多60字）</string>
    <string name="trtcvoiceroom_regurgitation">耳返</string>
    <string name="trtcvoiceroom_tools">工具</string>
    <string name="trtcvoiceroom_lock">锁定</string>
    <string name="trtcvoiceroom_unlock">解锁</string>
    <string name="trtcvoiceroom_seat_mute">主播禁言</string>
    <string name="trtcvoiceroom_leave_seat">要求下麦</string>
    <string name="trtcvoiceroom_seat_closed">该麦位已经被关闭了</string>
    <string name="trtcvoiceroom_seat_already_mute">当前作为已经被静音，无法打开麦克风</string>
    <string name="trtcvoiceroom_bg_music_positive_happy">欢快</string>
    <string name="trtcvoiceroom_bg_music_sad_cinematic_piano">忧郁</string>
    <string name="trtcvoiceroom_bg_music_wonder_world">神奇世界</string>
    <string name="trtcvoiceroom_create_theme">%s的房间</string>
    <string name="trtcvoiceroom_audience">观众</string>
    <string name="trtcvoiceroom_welcome_visit">"欢迎体验TRTC语聊房！进一步了解如何快速搭建语聊房，请点击："</string>
    <string name="trtcvoiceroom_welcome_visit_link">"https://cloud.tencent.com/document/product/647/45737"</string>
</resources>
