<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="270dp"
    android:layout_height="142dp"
    android:layout_gravity="center"
    android:background="@drawable/trtcvoiceroom_bg_confirm_dialog">


    <TextView
        android:id="@+id/tv_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:layout_marginTop="40dp"
        android:textColor="#030303 "
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/trtcvoiceroom_tv_tools_test" />

    <View
        android:id="@+id/view_divide"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="43dp"
        android:background="@color/trtcvoiceroom_color_line"
        app:layout_constraintBottom_toBottomOf="parent" />

    <View
        android:layout_width="1dp"
        android:layout_height="43dp"
        android:background="@color/trtcvoiceroom_color_line"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_button_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/btn_negative"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/trtcvoiceroom_btn_cancel"
            android:textColor="@color/trtcvoiceroom_color_btn_negative"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="@id/cl_button_panel"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toLeftOf="@id/cl_button_panel"
            app:layout_constraintRight_toLeftOf="@+id/btn_positive" />

        <Button
            android:id="@+id/btn_positive"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/trtcvoiceroom_btn_confirm"
            android:textColor="@color/trtcvoiceroom_color_btn_positive"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="@id/cl_button_panel"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toRightOf="@id/btn_negative"
            app:layout_constraintRight_toRightOf="@id/cl_button_panel" />

    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>
